@@ -3624,7 +3624,7 @@ private:
                 // Either made explicitly or V3LinkDot made implicitly
                 classp->v3fatalSrc("Can't find class's new");
             }
-            if (classp->isVirtual()) {
+            if (classp->isVirtual() || classp->isInterfaceClass()) {
                 nodep->v3error(
                     "Illegal to call 'new' using an abstract virtual class (IEEE 1800-2017 8.21)");
             }
