@@ -214,8 +214,9 @@ private:
     void visit(AstNodeFTask* nodep) override {
         iterateChildren(nodep);
         editDType(nodep);
-        if (nodep->classMethod() && nodep->pureVirtual() && VN_IS(m_modp, Class)
-            && !VN_AS(m_modp, Class)->isVirtual()) {
+        AstClass* classp = VN_CAST(m_modp, Class);
+        if (nodep->classMethod() && nodep->pureVirtual() && classp && !classp->isInterfaceClass()
+            && !classp->isVirtual()) {
             nodep->v3error(
                 "Illegal to have 'pure virtual' in non-virtual class (IEEE 1800-2017 8.21)");
         }
