@@ -11,13 +11,7 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 scenarios(simulator => 1);
 
 compile(
-    fails => $Self->{vlt_all},
-    expect_filename => $Self->{golden_filename},
     );
-
-execute(
-    check_finished => 1,
-    ) if !$Self->{vlt_all};
 
 ok(1);
 1;
