@@ -1,5 +1,7 @@
-%Error-UNSUPPORTED: t/t_implements_missing_bad.v:7:11: Unsupported: interface classes
-    7 | interface class Icls1;
-      |           ^~~~~
-                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
+%Error: t/t_implements_missing_bad.v:12:1: Class 'Cls' implements 'Icls1' but is missing implementation for 'icf2' (IEEE 1800-2017 8.26)
+   12 | class Cls implements Icls1;
+      | ^~~~~
+        t/t_implements_missing_bad.v:9:30: ... Location of interface class's function
+    9 |    pure virtual function int icf2;
+      |                              ^~~~
 %Error: Exiting due to
