@@ -1,5 +1,4 @@
-%Error-UNSUPPORTED: t/t_implements_noinherit_bad.v:7:11: Unsupported: interface classes
-    7 | interface class Icls;
-      |           ^~~~~
-                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
+%Error: t/t_implements_noinherit_bad.v:14:16: Can't find definition of variable: 'IP'
+   14 |       $display(IP);  
+      |                ^~
 %Error: Exiting due to
